// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ManagedSilence /> matches snapshot when collapsed 1`] = `
<DocumentFragment>
  <div
    class="card my-1 components-managed-silence w-100"
  >
    <div
      class="card-header rounded-0 border-bottom-0 px-2"
    >
      <div
        class="d-flex flex-row"
      >
        <div
          class="flex-shrink-0 flex-grow-0"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-bell-slash text-muted"
            data-icon="bell-slash"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M41-24.9c-9.4-9.4-24.6-9.4-33.9 0S-2.3-.3 7 9.1l528 528c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-87.5-87.5c17.2-2.4 30.5-17.3 30.5-35.2 0-8.1-2.7-15.9-7.8-22.2l-9.8-12.2C464.4 308.5 448 261.8 448 213.7l0-21.7c0-77.4-55-142-128-156.8l0-3.2c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 3.2c-38.6 7.8-72.2 29.6-95.2 59.7L41-24.9zm87 238.5c0 48.1-16.4 94.8-46.4 132.4l-9.8 12.2c-5 6.3-7.8 14.1-7.8 22.2 0 19.6 15.9 35.5 35.5 35.5l235.3 0-206.9-206.9 0 4.5zM288 512c29.8 0 54.9-20.4 62-48l-124 0c7.1 27.6 32.2 48 62 48z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="mx-2 flex-shrink-1 flex-grow-1 mw-1p"
        >
          <div
            class="components-managed-silence-comment text-truncate overflow-hidden"
          >
             Mocked Silence
          </div>
          <div
            class="components-managed-silence-cite mt-1 d-flex flex-row"
          >
            <span
              class="text-muted text-truncate overflow-hidden me-2"
            >
              — me@example.com
            </span>
            <div
              class="d-flex flex-row justify-content-end flex-grow-1"
            >
              <span
                class="badge bg-light components-label"
              >
                Expires in 30 minutes
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex-shrink-0 flex-grow-0"
        >
          <div
            class="d-flex flex-column flex-sm-row justify-content-between align-items-center"
          >
            <div
              class=" tooltip-trigger"
            >
              <span
                class="bg-primary rounded-pill components-label-with-hover components-label badge"
              >
                123
              </span>
            </div>
            <span
              class="badge components-label with-click"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer"
                data-icon="chevron-down"
                data-prefix="fas"
                role="img"
                style="transition: transform 0.25s ease-in-out;"
                viewBox="0 0 448 512"
              >
                <path
                  d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="progress silence-progress mx-2 mb-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 50%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ManagedSilence /> matches snapshot with expanded details 1`] = `
<DocumentFragment>
  <div
    class="card my-1 components-managed-silence w-100"
  >
    <div
      class="card-header rounded-0 border-bottom-0 px-2"
    >
      <div
        class="d-flex flex-row"
      >
        <div
          class="flex-shrink-0 flex-grow-0"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-bell-slash text-muted"
            data-icon="bell-slash"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M41-24.9c-9.4-9.4-24.6-9.4-33.9 0S-2.3-.3 7 9.1l528 528c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-87.5-87.5c17.2-2.4 30.5-17.3 30.5-35.2 0-8.1-2.7-15.9-7.8-22.2l-9.8-12.2C464.4 308.5 448 261.8 448 213.7l0-21.7c0-77.4-55-142-128-156.8l0-3.2c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 3.2c-38.6 7.8-72.2 29.6-95.2 59.7L41-24.9zm87 238.5c0 48.1-16.4 94.8-46.4 132.4l-9.8 12.2c-5 6.3-7.8 14.1-7.8 22.2 0 19.6 15.9 35.5 35.5 35.5l235.3 0-206.9-206.9 0 4.5zM288 512c29.8 0 54.9-20.4 62-48l-124 0c7.1 27.6 32.2 48 62 48z"
              fill="currentColor"
            />
          </svg>
        </div>
        <div
          class="mx-2 flex-shrink-1 flex-grow-1 mw-1p"
        >
          <div
            class="components-managed-silence-comment "
          >
             Mocked Silence
          </div>
          <div
            class="components-managed-silence-cite mt-1 d-flex flex-row"
          >
            <span
              class="text-muted text-truncate overflow-hidden "
            >
              — me@example.com
            </span>
          </div>
        </div>
        <div
          class="flex-shrink-0 flex-grow-0"
        >
          <div
            class="d-flex flex-column flex-sm-row justify-content-between align-items-center"
          >
            <div
              class=" tooltip-trigger"
            >
              <span
                class="bg-primary rounded-pill components-label-with-hover components-label badge"
              >
                123
              </span>
            </div>
            <span
              class="badge components-label with-click"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-down m-auto text-muted cursor-pointer"
                data-icon="chevron-down"
                data-prefix="fas"
                role="img"
                style="transition: transform 0.25s ease-in-out;"
                viewBox="0 0 448 512"
              >
                <path
                  d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body pt-0 px-2"
    >
      <div
        class="mt-1"
      >
        <div
          class="d-flex flex-fill flex-lg-row flex-column justify-content-between"
        >
          <div
            class="flex-shrink-1 flex-grow-1 mw-1p"
          >
            <div>
              <span
                class="badge px-1 me-1 components-label silence-detail"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-calendar-check fa-fw text-muted me-1"
                  data-icon="calendar-check"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M320 0c17.7 0 32 14.3 32 32l0 32 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 32 128 0 0-32c0-17.7 14.3-32 32-32zm22 161.7c-10.7-7.8-25.7-5.4-33.5 5.3L189.1 331.2 137 279.1c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l72 72c5 5 11.9 7.5 18.8 7s13.4-4.1 17.5-9.8L347.3 195.2c7.8-10.7 5.4-25.7-5.3-33.5z"
                    fill="currentColor"
                  />
                </svg>
                Started 30 minutes ago
              </span>
              <span
                class="badge  px-1 me-1 components-label silence-detail"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-calendar-xmark fa-fw text-muted me-1"
                  data-icon="calendar-xmark"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M128 0c17.7 0 32 14.3 32 32l0 32 128 0 0-32c0-17.7 14.3-32 32-32s32 14.3 32 32l0 32 32 0c35.3 0 64 28.7 64 64l0 288c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 128C0 92.7 28.7 64 64 64l32 0 0-32c0-17.7 14.3-32 32-32zM291.9 220.1c-9.4-9.4-24.6-9.4-33.9 0l-33.9 33.9-33.9-33.9c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l33.9 33.9-33.9 33.9c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l33.9-33.9 33.9 33.9c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-33.9-33.9 33.9-33.9c9.4-9.4 9.4-24.6 0-33.9z"
                    fill="currentColor"
                  />
                </svg>
                Expires in 30 minutes
              </span>
            </div>
            <div
              class="my-1 d-flex flex-row"
            >
              <span
                class="badge px-1 me-1 components-label silence-detail flex-grow-0 flex-shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-fingerprint fa-fw text-muted me-1"
                  data-icon="fingerprint"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M48 256c0-114.9 93.1-208 208-208 63.1 0 119.6 28.1 157.8 72.5 8.6 10.1 23.8 11.2 33.8 2.6s11.2-23.8 2.6-33.8C403.3 34.6 333.7 0 256 0 114.6 0 0 114.6 0 256l0 40c0 13.3 10.7 24 24 24s24-10.7 24-24l0-40zm458.5-52.9c-2.7-13-15.5-21.3-28.4-18.5s-21.3 15.5-18.5 28.4c2.9 13.9 4.5 28.3 4.5 43.1l0 40c0 13.3 10.7 24 24 24s24-10.7 24-24l0-40c0-18.1-1.9-35.8-5.5-52.9zM256 80c-19 0-37.4 3-54.5 8.6-15.2 5-18.7 23.7-8.3 35.9 7.1 8.3 18.8 10.8 29.4 7.9 10.6-2.9 21.8-4.4 33.4-4.4 70.7 0 128 57.3 128 128l0 24.9c0 25.2-1.5 50.3-4.4 75.3-1.7 14.6 9.4 27.8 24.2 27.8 11.8 0 21.9-8.6 23.3-20.3 3.3-27.4 5-55 5-82.7l0-24.9c0-97.2-78.8-176-176-176zM150.7 148.7c-9.1-10.6-25.3-11.4-33.9-.4-23.1 29.8-36.8 67.1-36.8 107.7l0 24.9c0 24.2-2.6 48.4-7.8 71.9-3.4 15.6 7.9 31.1 23.9 31.1 10.5 0 19.9-7 22.2-17.3 6.4-28.1 9.7-56.8 9.7-85.8l0-24.9c0-27.2 8.5-52.4 22.9-73.1 7.2-10.4 8-24.6-.2-34.2zM256 160c-53 0-96 43-96 96l0 24.9c0 35.9-4.6 71.5-13.8 106.1-3.8 14.3 6.7 29 21.5 29 9.5 0 17.9-6.2 20.4-15.4 10.5-39 15.9-79.2 15.9-119.7l0-24.9c0-28.7 23.3-52 52-52s52 23.3 52 52l0 24.9c0 36.3-3.5 72.4-10.4 107.9-2.7 13.9 7.7 27.2 21.8 27.2 10.2 0 19-7 21-17 7.7-38.8 11.6-78.3 11.6-118.1l0-24.9c0-53-43-96-96-96zm24 96c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 24.9c0 59.9-11 119.3-32.5 175.2l-5.9 15.3c-4.8 12.4 1.4 26.3 13.8 31s26.3-1.4 31-13.8l5.9-15.3C267.9 411.9 280 346.7 280 280.9l0-24.9z"
                    fill="currentColor"
                  />
                </svg>
                ID:
              </span>
              <span
                class="badge bg-light px-1 me-1 components-label silence-id"
              >
                04d37636-2350-4878-b382-e0b50353230f
              </span>
              <div
                class=" tooltip-trigger"
              >
                <span
                  class="badge bg-secondary px-1 me-1 components-label cursor-pointer"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-copy "
                    data-icon="copy"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-200.6c0-17.4-7.1-34.1-19.7-46.2L370.6 17.8C358.7 6.4 342.8 0 326.3 0L192 0zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-16-64 0 0 16-192 0 0-256 16 0 0-64-16 0z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="my-1"
            >
              <span
                class="badge px-1 me-1 components-label silence-detail"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-house fa-fw text-muted me-1"
                  data-icon="house"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M277.8 8.6c-12.3-11.4-31.3-11.4-43.5 0l-224 208c-9.6 9-12.8 22.9-8 35.1S18.8 272 32 272l16 0 0 176c0 35.3 28.7 64 64 64l288 0c35.3 0 64-28.7 64-64l0-176 16 0c13.2 0 25-8.1 29.8-20.3s1.6-26.2-8-35.1l-224-208zM240 320l32 0c26.5 0 48 21.5 48 48l0 96-128 0 0-96c0-26.5 21.5-48 48-48z"
                    fill="currentColor"
                  />
                </svg>
                View in Alertmanager:
              </span>
              <a
                class="components-label components-label-with-hover badge border components-grid-annotation-link"
                href="http://example.com/#/silences/04d37636-2350-4878-b382-e0b50353230f"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-up-right-from-square "
                  data-icon="up-right-from-square"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M290.4 19.8C295.4 7.8 307.1 0 320 0L480 0c17.7 0 32 14.3 32 32l0 160c0 12.9-7.8 24.6-19.8 29.6s-25.7 2.2-34.9-6.9L400 157.3 246.6 310.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L354.7 112 297.4 54.6c-9.2-9.2-11.9-22.9-6.9-34.9zM0 176c0-44.2 35.8-80 80-80l80 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-80 0c-8.8 0-16 7.2-16 16l0 256c0 8.8 7.2 16 16 16l256 0c8.8 0 16-7.2 16-16l0-80c0-17.7 14.3-32 32-32s32 14.3 32 32l0 80c0 44.2-35.8 80-80 80L80 512c-44.2 0-80-35.8-80-80L0 176z"
                    fill="currentColor"
                  />
                </svg>
                 am1
              </a>
            </div>
            <div
              class="d-flex flex-row"
            >
              <div
                class="flex-shrink-0 flex-grow-0"
              >
                <span
                  class="badge px-1 me-1 components-label silence-detail"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-filter fa-fw text-muted me-1"
                    data-icon="filter"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M32 64C19.1 64 7.4 71.8 2.4 83.8S.2 109.5 9.4 118.6L192 301.3 192 416c0 8.5 3.4 16.6 9.4 22.6l64 64c9.2 9.2 22.9 11.9 34.9 6.9S320 492.9 320 480l0-178.7 182.6-182.6c9.2-9.2 11.9-22.9 6.9-34.9S492.9 64 480 64L32 64z"
                      fill="currentColor"
                    />
                  </svg>
                  Matchers:
                </span>
              </div>
              <div
                class="flex-shrink-1 flex-grow-1 mw-1p"
                style="min-width: 0px;"
              >
                <span
                  class="badge silence-matcher-equal px-1 me-1 components-label"
                >
                  regex=~"equal"
                </span>
                <span
                  class="badge silence-matcher-negative px-1 me-1 components-label"
                >
                  regex!~"notEqual"
                </span>
                <span
                  class="badge silence-matcher-equal px-1 me-1 components-label"
                >
                  notRegex="equal"
                </span>
                <span
                  class="badge silence-matcher-negative px-1 me-1 components-label"
                >
                  notRegex!="notEqual"
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex-shrink-0 flex-grow-0 mt-lg-0 mt-2 ml-lg-2 ms-0"
          >
            <div
              class="d-flex flex-fill flex-lg-column flex-row justify-content-around"
            >
              <button
                class="btn btn-primary btn-sm mb-lg-2 mb-0"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-pen-to-square me-1 d-none d-sm-inline-block"
                  data-icon="pen-to-square"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L368 46.1 465.9 144 490.3 119.6c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L432 177.9 334.1 80 172.4 241.7zM96 64C43 64 0 107 0 160L0 416c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-96c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 96c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-256c0-17.7 14.3-32 32-32l96 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L96 64z"
                    fill="currentColor"
                  />
                </svg>
                Edit
              </button>
              <button
                class="btn btn-danger btn-sm"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-trash me-1 d-none d-sm-inline-block"
                  data-icon="trash"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                    fill="currentColor"
                  />
                </svg>
                Delete
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="progress silence-progress mx-2 mb-1"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 50%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
